[gd_scene load_steps=6 format=2]

[ext_resource path="res://Mob.gd" type="Script" id=1]
[ext_resource path="res://mob.png" type="Texture" id=2]
[ext_resource path="res://mob_exploded.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 18.5324

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Mob" type="RigidBody2D" groups=[
"Mobs",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = true
continuous_cd = 2
contacts_reported = 1024
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}
min_speed = 50
max_speed = 100
alive = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="1"]

rect = Rect2( -10, -10, 20, 20 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 2 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Exploding" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_Mob_body_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="timeout" from="Exploding" to="." method="_on_Exploding_timeout"]


